--- a/languages/zh-cn.json
+++ b/languages/zh-cn.json
@@ -27,6 +27,8 @@
     "configs": "配置",
     "validator": "验证器",
     "version": "版本信息",
+    "next": "下一页",
+    "previous": "上一页",
     "period": "。",
     "try": "亲自试一试：",
     "run": "运行",
