--- a/languages/en-us.json
+++ b/languages/en-us.json
@@ -25,6 +25,9 @@
         "question": "How to use dagger.js",
         "answer": "<span>dagger.js is a lightweight and complete client side runtime framework with no dependency on any third-party code or build tools. Users may build a development environment and start coding based on the following steps quickly:<div class=\"sub-answer\">1. To include dagger.js via script tag in your html file:<br/><span style='font-style: italic; background-color: #eeeeee;'>&lt;script type=\"module\" crossorigin=\"anonymous\" src=\"https://cdn.jsdelivr.net/npm/@peakman/dagger.js/dagger.js\" defer&gt;&lt;/script&gt;</span><br/>2. To insert the <a href='miscellaneous/introduction'>root configs</a> tag under the head tag to declare the <a href='router/introduction'>routing scenarios</a> and the <a href='module/introduction'>module</a> dependency to render views.<br/>3. To declare <a href='directive/introduction'>directives</a> on DOM tags to define the interaction between page elements and data models.</div></span>"
     }, {
+        "question": "View the online demo",
+        "answer": "<span><a target='_blank' href='https://codepen.io/dagger8224/pen/XWNagBY?editors=1000'>codepen</span>"
+    }, {
         "question": "How to learn dagger.js",
         "answer": "<span>This site provides a succinct tutorials and the corresponding examples for dagger.js. In fact, <a target='_blank' href='https://github.com/dagger8224/dagger8224.github.io'>the project of this document site</a> is a typical demonstration for how to use dagger.js. Don't worry, it is very easy to learn and to use. Now let's start the <a href='directive/introduction'>tutorials</a> of dagger.js.</span>"
     }],
