--- a/languages/zh-cn.json
+++ b/languages/zh-cn.json
@@ -67,7 +67,7 @@
         "answer": "<span>指令是dagger.js中的一个重要概念。形式上，指令是定义在DOM元素上的特殊<a target='_blank' href='https://developer.mozilla.org/zh-CN/docs/Web/HTML/Attributes'>属性</a>（带有特定前缀标记）。在运行时当中，指令会被转换为特定作用域下的表达式，并与所关联的DOM元素产生动态交互。在后续的教程中，我们会结合实例讲解各指令的具体使用方法。</span>"
     }, {
         "question": "指令分为哪些种类",
-        "answer": "<span>指令共分为四种：<a href='directive/raw'>元指令</a>（以符号“@”作为前缀，如“@raw”），<a href='directive/lifeCycle'>生命周期指令</a>（以符号“$”作为前缀，如“$loading”），<a href='directive/controller'>控制指令</a>（以符号“$”作为前缀，如“$value”）以及<a href='directive/eventHandler'>事件指令</a>（以符号“+”作为前缀，如“+click”）。</span>"
+        "answer": "<span>指令共分为四种：<a href='directive/raw'>元指令</a>（以符号“@”作为前缀，如“@raw”），<a href='directive/lifeCycle'>生命周期指令</a>（以符号“$”作为前缀，如“+loading”），<a href='directive/controller'>控制指令</a>（以符号“$”作为前缀，如“$value”）以及<a href='directive/eventHandler'>事件指令</a>（以符号“+”作为前缀，如“+click”）。</span>"
     }, {
         "question": "指令的结构",
         "answer": "<span>一个典型的指令由</span><span class='format'> “ 前缀 + 名称 + 修饰符（可选）+ 表达式 ” </span><span>组成。<a href='directive/decorator'>修饰符</a>是一组由\"#\"分割的键值对，用于进一步定制指令的行为。元指令只包含</span><span class='format'> “ 前缀 + 名称 ” </span><span>，不支持修饰符和表达式。</span>"
@@ -79,7 +79,7 @@
         "answer": "<span>任何合法的单一javaScript语句都可以作为指令表达式的内容（不要在语句前添加return），包含同步、异步函数，也可以直接声明成一个对象字面量。如果需要在指令中使用内联的复合语句，请将语句拆解为多个逗号表达式或者包裹为立即执行函数。事实上，对于复杂的业务逻辑，更合适的方法是将逻辑封装在<a href='module/script'>script</a>模块当中，仅仅将表达式作为调用的入口。</span>"
     }, {
         "question": "指令表达式中变量的定义域",
-        "answer": "<span>指令表达式工作在其所在的运行时作用域下。除顶层的javaScript<a target='_blank' href='https://developer.mozilla.org/en-US/docs/Glossary/Global_scope'>全局作用域</a>和次顶层的dagger.js<a href='miscellaneous/introduction'>根作用域</a>之外，每一个元素都可以通过<a href='directive/loading'>$loading</a>生命周期指令动态创建上下文作用域。不同层级的变量作用域自顶向下构成一棵运行时作用域树。每个指令表达式可以访问其所在层级或者祖先层级所定义的作用域变量。</span>"
+        "answer": "<span>指令表达式工作在其所在的运行时作用域下。除顶层的javaScript<a target='_blank' href='https://developer.mozilla.org/en-US/docs/Glossary/Global_scope'>全局作用域</a>和次顶层的dagger.js<a href='miscellaneous/introduction'>根作用域</a>之外，每一个元素都可以通过<a href='directive/loading'>+loading</a>生命周期指令动态创建上下文作用域。不同层级的变量作用域自顶向下构成一棵运行时作用域树。每个指令表达式可以访问其所在层级或者祖先层级所定义的作用域变量。</span>"
     }, {
         "question": "指令是必须的还是可选的",
         "answer": "<span>所有的指令都是可选的，一个没有声明任何指令的元素被称为平凡元素。</span>"
@@ -98,56 +98,56 @@
         "answer": "<span>生命周期指令是一组在关联元素的创建、销毁或者连接状态发生变化时触发的指令。</span>"
     }, {
         "question": "生命周期指令列表",
-        "answer": "<span><a href='directive/loading'>$loading</a><a href='directive/loaded'>$loaded</a><a href='directive/unloading'>$unloading</a><a href='directive/unloaded'>$unloaded</a><a href='directive/sentry'>$sentry</a></span>"
+        "answer": "<span><a href='directive/loading'>+loading</a><a href='directive/loaded'>+loaded</a><a href='directive/unloading'>+unloading</a><a href='directive/unloaded'>+unloaded</a><a href='directive/sentry'>+sentry</a></span>"
     }, {
         "question": "创建元素时生命周期指令的执行顺序",
-        "answer": "<span>父级$loading -> 子级$loading -> 子级$loaded -> 父级$loaded</span>"
+        "answer": "<span>父级+loading -> 子级+loading -> 子级+loaded -> 父级+loaded</span>"
     }, {
         "question": "销毁元素时生命周期指令的执行顺序",
-        "answer": "<span>（全局$sentry判定） -> 父级$unloading -> 子级$unloading -> 子级$unloaded -> 父级$unloaded</span>"
+        "answer": "<span>（全局+sentry判定） -> 父级+unloading -> 子级+unloading -> 子级+unloaded -> 父级+unloaded</span>"
     }, {
         "question": "可应用生命周期指令的元素",
         "answer": "<span>任何DOM元素都可以使用生命周期指令。</span>"
     }],
-    "directive.loading": "指令/$loading",
+    "directive.loading": "指令/+loading",
     "directive.loading.sections": [{
-        "question": "$loading指令的作用",
-        "answer": "<span>$loading指令在关联元素创建完成之前由框架触发调用，主要用于在当前上下文创建一个新的变量作用域。</span>"
+        "question": "+loading指令的作用",
+        "answer": "<span>+loading指令在关联元素创建完成之前由框架触发调用，主要用于在当前上下文创建一个新的变量作用域。</span>"
     }, {
-        "question": "$loading指令表达式的返回值",
+        "question": "+loading指令表达式的返回值",
         "answer": "<span>如果指令表达式的返回值是一个平凡对象（不包括数组等广义对象），则在指令表达式执行结束后将根据返回值的字段内容在当前上下文创建一个新的运行时作用域，该作用域定义的变量可以在当前元素的其余指令（除<a href='directive/each'>$each</a>和<a href='directive/exist'>$exist</a>指令外）和子元素的所有指令中访问。内部层级创建的作用域变量会覆盖同名的外部作用域变量。</span>"
     }],
-    "directive.loaded": "指令/$loaded",
+    "directive.loaded": "指令/+loaded",
     "directive.loaded.sections": [{
-        "question": "$loaded指令的作用",
-        "answer": "<span>$loaded指令在关联元素创建完成之后（如果关联元素是&lt;html&gt;标签，则在每次路由跳转完成之后）由框架触发调用，用于对关联元素或者作用域变量进行初始化操作。$loaded指令表达式中可以使用指向关联元素的上下文参数$node（参数名称可以在<a href='directive/decorator'>指令修饰符</a>中定制修改）。</span>"
+        "question": "+loaded指令的作用",
+        "answer": "<span>+loaded指令在关联元素创建完成之后（如果关联元素是&lt;html&gt;标签，则在每次路由跳转完成之后）由框架触发调用，用于对关联元素或者作用域变量进行初始化操作。+loaded指令表达式中可以使用指向关联元素的上下文参数$node（参数名称可以在<a href='directive/decorator'>指令修饰符</a>中定制修改）。</span>"
     }, {
-        "question": "$loaded指令表达式的返回值",
-        "answer": "<span>$loaded指令的返回值无意义。</span>"
+        "question": "+loaded指令表达式的返回值",
+        "answer": "<span>+loaded指令的返回值无意义。</span>"
     }],
-    "directive.unloading": "指令/$unloading",
+    "directive.unloading": "指令/+unloading",
     "directive.unloading.sections": [{
-        "question": "$unloading指令的作用",
-        "answer": "<span>$unloading指令在关联元素移除之前（如果关联元素是&lt;html&gt;标签，则在每次路由跳转完成之前）由框架触发调用，用于对关联元素或者作用域变量进行清理操作。$unloading指令表达式中可以使用指向关联元素的上下文参数$node（参数名称可以在<a href='directive/decorator'>指令修饰符</a>中定制修改）。</span>"
+        "question": "+unloading指令的作用",
+        "answer": "<span>+unloading指令在关联元素移除之前（如果关联元素是&lt;html&gt;标签，则在每次路由跳转完成之前）由框架触发调用，用于对关联元素或者作用域变量进行清理操作。+unloading指令表达式中可以使用指向关联元素的上下文参数$node（参数名称可以在<a href='directive/decorator'>指令修饰符</a>中定制修改）。</span>"
     }, {
-        "question": "$unloading指令表达式的返回值",
-        "answer": "<span>$unloading指令的返回值无意义。</span>"
+        "question": "+unloading指令表达式的返回值",
+        "answer": "<span>+unloading指令的返回值无意义。</span>"
     }],
-    "directive.unloaded": "指令/$unloaded",
+    "directive.unloaded": "指令/+unloaded",
     "directive.unloaded.sections": [{
-        "question": "$unloaded指令的作用",
-        "answer": "<span>$unloaded指令在关联元素移除之后（如果关联元素是&lt;html&gt;标签，则在每次路由跳转完成之前）由框架触发调用，用于对关联元素或者作用域变量进行清理操作。$unloaded指令表达式中可以使用指向已移除的关联元素的上下文参数$node（参数名称可以在<a href='directive/decorator'>指令修饰符</a>中定制修改）。</span>"
+        "question": "+unloaded指令的作用",
+        "answer": "<span>+unloaded指令在关联元素移除之后（如果关联元素是&lt;html&gt;标签，则在每次路由跳转完成之前）由框架触发调用，用于对关联元素或者作用域变量进行清理操作。+unloaded指令表达式中可以使用指向已移除的关联元素的上下文参数$node（参数名称可以在<a href='directive/decorator'>指令修饰符</a>中定制修改）。</span>"
     }, {
-        "question": "$unloaded指令表达式的返回值",
-        "answer": "<span>$unloaded指令的返回值无意义。</span>"
+        "question": "+unloaded指令表达式的返回值",
+        "answer": "<span>+unloaded指令的返回值无意义。</span>"
     }],
-    "directive.sentry": "指令/$sentry",
+    "directive.sentry": "指令/+sentry",
     "directive.sentry.sections": [{
-        "question": "$sentry指令的作用",
-        "answer": "<span>每个$sentry指令会注册为一个全局的回调方法，当页面试图进行路由跳转时会触发回调方法执行，根据表达式的执行结果判断是否继续进行路由跳转。$sentry指令表达式中可以使用指向目标<a href='router/introduction'>路由</a>对象的上下文参数$nextRouter（参数名称可以在<a href='directive/decorator'>指令修饰符</a>中定制修改）。</span>"
+        "question": "+sentry指令的作用",
+        "answer": "<span>每个+sentry指令会注册为一个全局的回调方法，当页面试图进行路由跳转时会触发回调方法执行，根据表达式的执行结果判断是否继续进行路由跳转。+sentry指令表达式中可以使用指向目标<a href='router/introduction'>路由</a>对象的上下文参数$nextRouter（参数名称可以在<a href='directive/decorator'>指令修饰符</a>中定制修改）。</span>"
     }, {
-        "question": "$sentry指令表达式的返回值",
-        "answer": "<span>当任意一个$sentry表达式的返回值为true或等效值时，路由跳转过程将终止。</span>"
+        "question": "+sentry指令表达式的返回值",
+        "answer": "<span>当任意一个+sentry表达式的返回值为true或等效值时，路由跳转过程将终止。</span>"
     }],
     "directive.controller": "指令/控制指令",
     "directive.controller.sections": [{
@@ -164,7 +164,7 @@
         "answer": "<span>除$watch指令外，控制指令表达式的返回值将对关联元素的属性或行为产生特定的影响。</span>"
     }, {
         "question": "控制指令表达式的触发时机",
-        "answer": "<span>除$each和$exist指令外，控制指令表达式将在关联元素的$loading指令之后（如果有），$loaded指令执行之前（如果有）由框架触发。如果指令表达式中依赖变量的值发生变化，则在关联元素的生存期内控制指令可能会多次触发更新。如果一个元素上定义了多个控制指令，其首次触发的先后顺序将与在元素上的声明顺序一致。</span>"
+        "answer": "<span>除$each和$exist指令外，控制指令表达式将在关联元素的+loading指令之后（如果有），+loaded指令执行之前（如果有）由框架触发。如果指令表达式中依赖变量的值发生变化，则在关联元素的生存期内控制指令可能会多次触发更新。如果一个元素上定义了多个控制指令，其首次触发的先后顺序将与在元素上的声明顺序一致。</span>"
     }, {
         "question": "控制指令的适用元素",
         "answer": "<span>除去文档中特别说明的情况之外，控制指令可应用于除html标签外的所有元素。</span>"
@@ -211,7 +211,7 @@
         "answer": "<span>当指令表达式返回true或者其他等效值时关联元素将被创建，否则将被销毁。</span>"
     }, {
         "question": "$exist指令与生命周期的关系",
-        "answer": "<span>每当$exist表达式的返回值状态切换时，对应的生命周期方法将会被触发（创建过程$loading/$loaded指令执行，销毁过程$unloading/$unloaded指令执行）。</span>"
+        "answer": "<span>每当$exist表达式的返回值状态切换时，对应的生命周期方法将会被触发（创建过程+loading/+loaded指令执行，销毁过程+unloading/+unloaded指令执行）。</span>"
     }],
     "directive.file": "指令/$file",
     "directive.file.sections": [{
@@ -352,7 +352,7 @@
         "answer": "<span>指令默认工作在非敏感模式下，即在某个指令表达式的执行过程中，变量更新后不会立即触发对此变量有依赖的其他指令表达式执行，而是把这些指令表达式加入待执行队列中，在当前指令表达式执行完毕后再执行。<br/>用户可以使用sensitive(:true)修饰符将指令设置为敏感模式，在此模式下，变量更新将立即触发依赖表达式的执行，在其执行完毕后再返回当前工作栈继续执行后续语句。</span>"
     }, {
         "question": "预定义的生命周期指令修饰符",
-        "answer": "<span>“<a href='directive/sentry'>$sentry</a>”生命周期指令支持预定义修饰符next，用于指定回调方法中指向目标<a href='router/introduction'>路由</a>对象的变量名称，缺省变量名为“$nextRouter”；“<a href='directive/loaded'>$loaded</a>”，“<a href='directive/unloading'>$unloading</a>”，“<a href='directive/unloaded'>$unloaded</a>”生命周期指令支持预定义修饰符node，用于指定回调方法中指向关联元素的变量名称，缺省变量名为“$node”。</span>"
+        "answer": "<span>“<a href='directive/sentry'>+sentry</a>”生命周期指令支持预定义修饰符next，用于指定回调方法中指向目标<a href='router/introduction'>路由</a>对象的变量名称，缺省变量名为“$nextRouter”；“<a href='directive/loaded'>+loaded</a>”，“<a href='directive/unloading'>+unloading</a>”，“<a href='directive/unloaded'>+unloaded</a>”生命周期指令支持预定义修饰符node，用于指定回调方法中指向关联元素的变量名称，缺省变量名为“$node”。</span>"
     }, {
         "question": "预定义的控制指令修饰符",
         "answer": "<span>$value指令支持如下预定义修饰符：<div class=\"sub-answer\">1. number，用于将用户输入字符串转换为数字格式；<br/>2. trim，用于去除用户输入字符串的首尾空白字符；<br/>3. input，框架默认在输入框失去焦点后将用户输入字符串更新到指令表达式的返回值上（监听change事件），声明该修饰符将改为监听输入框的input事件，在用户输入任意字符后立刻触发表达式更新。</div>$each指令支持如下预定义修饰符：<div class=\"sub-answer\">1. item，用于指定复制元素作用域下的切片变量名称（缺省变量名为item），例如item:slice将切片变量命名为slice；<br/>2. index，用于指定切片变量在父级变量中的索引变量名称（缺省变量名为index，类型为数字）；<br/>3. key，用于指定切片变量在父级变量中的字段名称（缺省变量名为key，类型为字符串）。</div>$checked指令支持预定义修饰符scope，用于指定选项组的父级元素选择器（默认为指令关联元素的父元素）。<br/>$focus指令支持预定义修饰符prevent，用于指定<a target='_blank' href='https://developer.mozilla.org/zh-CN/docs/Web/API/HTMLElement/focus'>是否将获取焦点的元素滚动到当前浏览器视窗中</a>。</span>"
@@ -479,7 +479,7 @@
         "answer": "<span>路由配置项由页面根<a href='miscellaneous/introduction'>配置项</a>下的“routing”字段定义。</span>"
     }, {
         "question": "路由跳转方式",
-        "answer": "<span>点击“href”属性指向hash值（由“./”或者“/”开头的相对路径链接将被识别为url路径而非hash）的链接标签，或者在javaScript代码中使用语句“location.hash = 'xxx';”均可触发页面hash状态变化，当路由管理器查找到与目标hash匹配的路由配置项时将加载和解析配置项中声明的资源模块并初始化上下文作用域，结合“<a href='directive/html'>$html</a>”指令进行页面渲染。<br/>请注意路由切换时将触发全局的<a href='directive/sentry'>$sentry</a>检查，不满足条件的跳转将被阻塞。</span>"
+        "answer": "<span>点击“href”属性指向hash值（由“./”或者“/”开头的相对路径链接将被识别为url路径而非hash）的链接标签，或者在javaScript代码中使用语句“location.hash = 'xxx';”均可触发页面hash状态变化，当路由管理器查找到与目标hash匹配的路由配置项时将加载和解析配置项中声明的资源模块并初始化上下文作用域，结合“<a href='directive/html'>$html</a>”指令进行页面渲染。<br/>请注意路由切换时将触发全局的<a href='directive/sentry'>+sentry</a>检查，不满足条件的跳转将被阻塞。</span>"
     }],
     "router.structure": "路由/结构",
     "router.structure.sections": [{
