--- a/languages/zh-cn.json
+++ b/languages/zh-cn.json
@@ -5,10 +5,14 @@
     },
     "viewOnGithub": "在Github上查看",
     "overview": "概览",
+    "overview.introduction": "概览/介绍",
+    "overview.install": "概览/安装",
+    "overview.hello_dagger": "概览/Hello dagger",
     "install": "安装",
     "introduction": "介绍",
     "string": "字符串",
     "directive": "指令",
+    "directive.introduction": "指令/介绍",
     "lifeCycle": "生命周期指令",
     "eventHandler": "事件处理",
     "index": "目录",
