--- a/languages/zh-cn.json
+++ b/languages/zh-cn.json
@@ -3,11 +3,12 @@
         "en-us": "English",
         "zh-cn": "中文（简体）"
     },
+    "application": "应用程序",
     "viewOnGithub": "在Github上查看",
     "overview": "概览",
     "overview.introduction": "概览/介绍",
     "overview.install": "概览/安装",
-    "overview.hello_dagger": "概览/Hello dagger",
+    "overview.application": "概览/应用程序",
     "install": "安装",
     "introduction": "介绍",
     "string": "字符串",
